@@ -57,6 +57,8 @@ IMPROVEMENTS:
   ZOOKEEPER-1746. AsyncCallback.*Callback don't have any Javadoc
   (Hongchao Deng via phunt)
 
+  ZOOKEEPER-1917. Apache Zookeeper logs cleartext admin passwords (fpj via michim)
+
 Release 3.4.6 - 2014-03-10 
 
 Backward compatible changes:
